tooling/nargo_cli/tests/snapshots/compile_failure/multiple_primary_attributes_fail/execute__tests__multiple_primary_attributes_fail_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Usage of the `#[oracle]` function attribute is only valid on unconstrained functions
  ┌─ src/main.nr:2:1
  │
2 │ #[oracle(oracleName)]
  │ ---------------------
3 │ #[builtin(builtinName)]
4 │ fn main(x: Field) -> pub Field {
  │    ---- Oracle functions must have the `unconstrained` keyword applied
  │

error: Multiple primary attributes found. Only one function attribute is allowed per function
  ┌─ src/main.nr:3:1
  │
3 │ #[builtin(builtinName)]
  │ -----------------------
  │

Aborting due to 2 previous errors
